--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <a class="link" href="https://chat.whatsapp.com/Gt5KNUSWLyZD55JlW3O8Kx" target="_blank">
         <i class="fab fa-whatsapp">&nbsp;</i>Whatsapp Community
     
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
+      <a class="link" href="https://forms.office.com/Pages/ResponsePage.aspx?id=oBzDhDusrk6tEVGdgCM-b2ypz2sAqSpOltIFDwoyji9UMDNERzgzVTRWVUM3UDlGSzQ4VlZHV0hWUS4u" target="_blank">
+        <i class="fab fa-facebook">&nbsp;</i>Registration Form
       </a>
       <a class="link" href="https://www.instagram.com/mlsa_liet?igsh=MXJpeGN3aTlsajNh" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
