--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <a class="link" href="https://www.linkedin.com/in/microsoft-learn-students-hub-liet" target="_blank">
         <i class="fa-brands fa-linkedin"></i> Linkedin
       </a>
-      <a class="link" href="https://www.instagram.com/mlsa_liet?igsh=MXJpeGN3aTlsajNh" target="_blank">
-        <i class="fa-brands fa-linkedin"></i> Instagram
+      <a class="link" href="https://www.instagram.com/mlsh_liet?igsh=MXJpeGN3aTlsajNh" target="_blank">
+        <i class="fa-brands fa-instagram"></i> Instagram
       </a>
         
     </div>
